--- a/app/index.html
+++ b/app/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Getting Started with Webpack</title>
-    <script src="/app/js/bundle.js"></script>
+    <script src="js/bundle.js"></script>
 </head>
 <body>
-    <h1>WebPack is fun</h1>
+    <h1>AngularJS tests</h1>
 </body>
 </html>
