--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,6 @@
     <script src="js/bundle.js"></script>
 </head>
 <body>
-    <h1>AngularJS tests</h1>
+    <h1>Webpack tests</h1>
 </body>
 </html>
